src/test/ui/const-generics/issues/issue-62220.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-62220.rs:12:27
   |
LL |     pub fn trunc(self) -> (TruncatedVector<T, { N }>, T) {
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

